--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,10 +1,15 @@
-name: Jekyll deploy to github pages
+name: Jekyll Deploy
 
 on: [push]
 
-jobs:
-  build:
+jobs: 
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Jekyll Action
-      uses: helaili/jekyll-action@1.0
+      - uses: actions/checkout@v1
+      - name: Build & Deploy to GitHub Pages
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+        uses: BryanSchuetz/jekyll-deploy-gh-pages@master
