--- a/_config.yml
+++ b/_config.yml
@@ -19,21 +19,19 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Victor J Perez III
-email: vjperez@mix.wvu.edu
+email: vjperez.iii@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A collection of nonfiction works covering topics such as music, tech, and fashion.
 baseurl: "/writing" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: vplocked
+twitter_username: N/A
 github_username: victorjperez
 destination: ./build
 # Build settings
 theme: minima
 paginate: 7
 paginate_path: "/latest/page:num/"
-topics: [nonfiction, tech, music, fashion, early works, satire, video games]
+topics: [nonfiction, tech, music, fashion, satire]
 plugins:
   - jekyll-feed
   - jekyll-paginate
