--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Victor J Perez III
-email: vjperez.iii@gmail.com
+email: vjperez@mix.wvu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of nonfiction works covering topics such as music, tech, and fashion.
 baseurl: "/writing" # the subpath of your site, e.g. /blog
