--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Victor J Perez III
-email: vjperez@mix.wvu.edu
+email: vjperez.iii@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of nonfiction works covering topics such as music, tech, and fashion.
 baseurl: "/writing" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: N/A
+twitter_username: none
 github_username: victorjperez
 destination: ./build
 # Build settings
